modified for function calling

--- a/notebooks/eda_visualization.ipynb
+++ b/notebooks/eda_visualization.ipynb
@@ -25,8 +25,7 @@
         "from itertools import chain\n",
         "from wordcloud import WordCloud\n",
         "from src.code import (\n",
-        "    load_datasets,\n",
-        "\n",
+        "    load_datasets\n",
         ")"
       ]
     },
