changed file name

--- a/notebooks/ModelAccuracy.ipynb
+++ b/notebooks/ModelAccuracy.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "id": "FKCLvEzrZVfe"
    },
@@ -33,7 +33,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from sklearn.metrics import precision_score, recall_score, f1_score, accuracy_score\n",
-    "from src.code import (\n",
+    "from src.predictive_models import (\n",
     "    load_datasets,\n",
     "    build_frequency_model,\n",
     "    predict_frequency_model,\n",
