--- a/notebooks/eda_visualization.ipynb
+++ b/notebooks/eda_visualization.ipynb
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": null,
       "metadata": {
         "id": "FKCLvEzrZVfe"
       },
@@ -34,7 +34,7 @@
         "from collections import Counter\n",
         "from itertools import chain\n",
         "from wordcloud import WordCloud\n",
-        "from src.code import (\n",
+        "from src.predictive_models import (\n",
         "    load_datasets\n",
         ")"
       ]
