add rag functions

--- a/notebooks/prompting.ipynb
+++ b/notebooks/prompting.ipynb
@@ -2,27 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "98b5ce55",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'genai' from 'google' (unknown location)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 22\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msrc\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpredictive_models\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[1;32m      6\u001b[0m     load_datasets,\n\u001b[1;32m      7\u001b[0m     build_frequency_model,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     14\u001b[0m     predict_naive_realism_model,\n\u001b[1;32m     15\u001b[0m )   \n\u001b[1;32m     16\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msrc\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01marticles\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[1;32m     17\u001b[0m     fetch_article,\n\u001b[1;32m     18\u001b[0m     prepare_article_for_models, \n\u001b[1;32m     19\u001b[0m     train_party_and_job_models\n\u001b[1;32m     20\u001b[0m )\n\u001b[0;32m---> 22\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mgoogle\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m genai\n\u001b[1;32m     23\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mgoogle\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mgenerativeai\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m types\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'genai' from 'google' (unknown location)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys, os\n",
     "sys.path.append(os.path.abspath(\"..\"))\n",
     "from dotenv import load_dotenv\n",
-    "\n",
+    "import chromadb\n",
+    "from chromadb.config import Settings\n",
+    "from sentence_transformers import SentenceTransformer\n",
     "from src.predictive_models import (\n",
     "    load_datasets,\n",
     "    build_frequency_model,\n",
@@ -40,8 +30,8 @@
     "    train_party_and_job_models\n",
     ")\n",
     "\n",
-    "from google import genai\n",
-    "from google.generativeai import types\n"
+    "# from google import genai\n",
+    "# from google.generativeai import types\n"
    ]
   },
   {
@@ -54,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "62489ec5",
    "metadata": {},
    "outputs": [],
@@ -87,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "aa17f6d0",
    "metadata": {},
    "outputs": [],
@@ -163,6 +153,71 @@
     "test_nr  = df_test.copy()\n",
     "\n",
     "naive_pipeline, naive_preproc, naive_meta, naive_num = build_naive_realism_model(train_nr, val_nr, test_nr)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b42587d1",
+   "metadata": {},
+   "source": [
+    "# RAG"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "02d970dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def chunk_text(text, chunk_size=500, overlap=50):\n",
+    "    chunks, start = [], 0\n",
+    "    while start < len(text):\n",
+    "        end = start + chunk_size\n",
+    "        chunks.append(text[start:end])\n",
+    "        start += chunk_size - overlap\n",
+    "    return chunks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "a01f36fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def setup_rag_for_article(article_df):\n",
+    "    text = article_df[\"statement\"].iloc[0]\n",
+    "    chunks = chunk_text(text)\n",
+    "    embedder = SentenceTransformer(\"all-MiniLM-L6-v2\")\n",
+    "    embeddings = embedder.encode(chunks)\n",
+    "\n",
+    "    client = chromadb.Client(Settings(anonymized_telemetry=False))\n",
+    "    collection = client.get_or_create_collection(name=\"articles\")\n",
+    "    collection.add(\n",
+    "        ids=[f\"chunk_{i}\" for i in range(len(chunks))],\n",
+    "        documents=chunks,\n",
+    "        embeddings=embeddings.tolist(),\n",
+    "        metadatas=[{\n",
+    "            \"source\": article_df[\"source\"].iloc[0],\n",
+    "            \"publish_date\": article_df[\"publish_date\"].iloc[0]\n",
+    "        } for _ in chunks]\n",
+    "    )\n",
+    "    return collection, embedder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "43bebd3d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def retrieve_context(query, collection, embedder, n_results=3):\n",
+    "    query_embedding = embedder.encode([query])\n",
+    "    results = collection.query(query_embeddings=query_embedding.tolist(), n_results=n_results)\n",
+    "    retrieved = [doc for doc in results[\"documents\"][0]]\n",
+    "    return \"\\n\\n\".join(retrieved)"
    ]
   },
   {
