--- a/notebooks/prompting.ipynb
+++ b/notebooks/prompting.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -19,7 +19,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "3lxc6-m-aI5x"
       },
@@ -72,7 +72,7 @@
         "from chromadb.config import Settings\n",
         "import textwrap\n",
         "from sklearn.linear_model import LogisticRegression\n",
-        "import json"
+        "import json\n"
       ]
     },
     {
@@ -4951,7 +4951,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "venv",
+      "display_name": "base",
       "language": "python",
       "name": "python3"
     },
