remove not used imports

--- a/notebooks/prompting.ipynb
+++ b/notebooks/prompting.ipynb
@@ -15,7 +15,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "3lxc6-m-aI5x"
       },
@@ -26,36 +26,21 @@
         "import pandas as pd\n",
         "import numpy as np\n",
         "from xgboost import XGBClassifier\n",
-        "from sklearn.metrics import classification_report\n",
         "from sklearn.preprocessing import LabelEncoder\n",
-        "from scipy.sparse import hstack\n",
         "from textblob import TextBlob\n",
         "from sklearn.pipeline import Pipeline\n",
         "import re\n",
         "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
         "from sklearn.compose import ColumnTransformer\n",
-        "from sklearn.utils import resample\n",
-        "import time\n",
-        "import requests\n",
-        "from bs4 import BeautifulSoup\n",
-        "from sklearn.metrics.pairwise import cosine_similarity\n",
-        "from sklearn.preprocessing import MinMaxScaler\n",
-        "import feedparser\n",
-        "from datetime import datetime\n",
         "from sklearn.feature_extraction.text import TfidfVectorizer, CountVectorizer\n",
         "from sklearn.ensemble import RandomForestClassifier\n",
-        "from sentence_transformers import SentenceTransformer, util\n",
-        "from sklearn.metrics import classification_report, accuracy_score, confusion_matrix\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "import matplotlib.pyplot as plt\n",
-        "import seaborn as sns\n",
+        "from sentence_transformers import SentenceTransformer\n",
         "from newspaper import Article\n",
         "from urllib.parse import urlparse\n",
         "import spacy\n",
         "from sentence_transformers import SentenceTransformer\n",
         "import chromadb\n",
         "from chromadb.config import Settings\n",
-        "import textwrap\n",
         "from sklearn.linear_model import LogisticRegression\n",
         "import json"
       ]
